@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-08-31T00:37:46Z",
+  "timestamp" : "2022-08-31T08:07:09Z",
   "count_outdated" : 49,
   "uniques_outdated" : 42,
-  "count" : 69,
-  "uniques" : 57,
+  "count" : 74,
+  "uniques" : 61,
   "clones" : [
     {
       "timestamp": "2022-08-18T00:00:00Z",
@@ -32,6 +32,13 @@
       "count_minmax": [ 7, 7 ],
       "uniques": 6,
       "uniques_minmax": [ 6, 6 ]
+    },
+    {
+      "timestamp": "2022-08-31T00:00:00Z",
+      "count": 5,
+      "count_minmax": [ 5, 5 ],
+      "uniques": 4,
+      "uniques_minmax": [ 4, 4 ]
     }
   ]
 }
