@@ -1,6 +1,6 @@
 {
-  "count": 20,
-  "uniques": 11,
+  "count": 25,
+  "uniques": 13,
   "clones": [
     {
       "timestamp": "2022-08-18T00:00:00Z",
@@ -21,6 +21,11 @@
       "timestamp": "2022-08-30T00:00:00Z",
       "count": 7,
       "uniques": 6
+    },
+    {
+      "timestamp": "2022-08-31T00:00:00Z",
+      "count": 5,
+      "uniques": 4
     }
   ]
 }
