@@ -1,3 +1,11 @@
+2022-08-31T08:07:09Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/2962255814
+* notice: last 14d: unq all: 13 25
+* notice: prev accum: outdated-unq outdated-all / unq all: 42 49 / 57 69
+* notice: next accum: outdated-unq outdated-all / unq all: 42 49 / 61 74
+* notice: prev exec diff / last date diff / accum: unq all: +4 +5 -0 -0 / +4 +5 -0 -0 / 4 5
+* notice: removed / changed dates: [] / [2022-08-31]
+
 2022-08-31T00:37:46Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/2960540541
 * notice: last 14d: unq all: 11 20
